--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "flower-web": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "remixicon": "^4.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
